cnis/n182/test_channel_1/cnf/ccrc/drop90_1.13.2+2_common_ip/network-policy/eric-fh-alarm-handler-allow.yaml
## The configuration is used for accessing fh-alarm-handler to get alarms (only for internal test usage)
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
  generation: 1
  labels:
    app.kubernetes.io/managed-by: Helm
  name: allow-eric-fh-alarm-handler  # change xxx-allow to allow-xxx to align with fivegcsafe
  namespace: ccrc
  selfLink: /apis/networking.k8s.io/v1/namespaces/ccrc/networkpolicies/allow-eric-fh-alarm-handler
spec:
  egress:
  - {}
  ingress:
  - {}
  podSelector:
    matchLabels:
      app.kubernetes.io/name: eric-fh-alarm-handler
  policyTypes:
  - Ingress
